# attaxr-seo-pipeline

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  after-install.md  gemini-extension.json  keywords.json  opencode.json  plugin.yaml  pyproject.toml
.agents/rules/: seo-pipeline.md
.claude-plugin/: marketplace.json  plugin.json
.clinerules/: seo-pipeline.md
.codex-plugin/: plugin.json
.cursor/rules/: seo-pipeline.mdc
.devin-plugin/: plugin.json
.github/: copilot-instructions.md
.kiro/steering/: seo-pipeline.md
.opencode/command/: seo-pipeline.md
.opencode/plugins/: seo-pipeline.mjs
.windsurf/rules/: seo-pipeline.md
commands/: run-pipeline.toml
examples/: README.md
hooks/: claude-codex-hooks.json  copilot-hooks.json
pi-extension/: index.js  package.json
scripts/: setup.py
scripts/seo_pipeline/: __init__.py  __main__.py  scraper.py
skills/seo-pipeline-bash/: SKILL.md
skills/seo-pipeline-llm/: SKILL.md
tests/: test_plugin.py  test_scraper.py
